Fix spacings when there is no avatar

--- a/src/messaging/components/message/message.css
+++ b/src/messaging/components/message/message.css
@@ -14,11 +14,12 @@
 }
 
 .message-avatar {
-  margin-right: 5px;
+  margin-right: calc(5px + var(--message-inner-padding-sides));
   flex: 0 0 auto;
 }
 
 .message-inner {
+  margin-left: calc(-1 * var(--message-inner-padding-sides));
   overflow: hidden;
   flex: 1;
 }
